# django-notebooks

./: .gitignore  manage.py  pyproject.toml
django_notebooks/: asgi.py  settings.py  urls.py  wsgi.py
notebooks/: __init__.py
