[tool.poetry]
name = "django-notebooks"
version = "0.1.0"
description = "An easy way to configure jupyter notebooks with django"
authors = ["rubensoleao <rubensoleao@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_notebooks"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4"
notebook = "^7.0.6"

[tool.poetry.group.dev.dependencies]
ruff-lsp = "^0.0.42"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
